# zarr-python

./: .authors.yml  .cirun.yml  .coveragerc  .deepsource.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .markdownlint-cli2.jsonc  .pep8speaks.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .sourcery.yaml  .travis.yml  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  FUNDING.yml  Justfile  LICENSE  LICENSE.txt  MANIFEST.in  PERSISTENCE.rst  README-v3.md  README.md  README.rst  TEAM.md  appveyor.yml  asv.conf.jsonc  build.cmd  chunk-grid-prospectus.md  chunking_test.py  codecov.yml  cpuinfo.py  environment.yml  lychee.toml  mkdocs.yml  (+31 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  gitter.yml  release-checklist.md
.github/workflows/: Pre-commit-hooks.yml  bigendian.sh  bigendian.yml  check_changelogs.yml  codeql-analysis.yml  codspeed.yml  docs.yml  downstream.yml  emscripten.yml  engine.yml  gpu_test.yml  hypothesis.yaml  issue-metrics.yml  latest-deps.yml  links.yml  lint.yml  minimal.yml  needs_release_notes.yml  nightly_wheels.yml  prepare_release.yml  python-package.yml  python-pre.yml  releases.yml  test-pypi-release.yml  test-v3.yml  test.yml  testpypi.yml  windows-testing.yml  zarr-indexing-release.yml  zarr-indexing.yml  zarr-metadata-release.yml  zarr-metadata.yml  zarr-transforms-release.yml  zarr-transforms.yml  zarrista.yml  zarrs.yml  zizmor.yml
Benchmark/: asv.conf.json
Benchmark/benchmarks/: bench_creation.py  bench_creation2.py
Benchmark/html/: index.json  info.json  regressions.json  regressions.xml
Benchmark/results/: benchmarks.json
Benchmark/zarr-python/: config  packed-refs
a.zarr/: .zarray
appveyor/: install.ps1
b.zarr/: .zarray  29.8
bench/: compress_normal.py  compress_normal.txt  empty_chunks.py  write_shard.py
benchmarks/: benchmarks.py
c.zarr/: .zarray  7212.0
changes/: +engine-toplevel-api.feature.md  +future_metadata.feature.md  +roadmap.doc.md  +statically-typed-config.misc.md  +zarrista-backend.feature.md  +zarrs-bindings.feature.md  0000.feature.md  0000.removal.md  1661.feature.rst  1758.feature.md  1798.feature.rst  1806.feature.md  1903.feature.md  1903.feature.rst  202.bugfix.md  214.misc.md  215.misc.md  226.bugfix.md  2533.bigfix.rst  2582.bugfix.rst  2616.feature.rst  2622.feature.rst  2661.feature.1.rst  2665.feature.rst  2681.bugfix.rst  2693.bugfix.1.rst  2693.bugfix.2.rst  2693.bugfix.3.rst  2693.bugfix.4.rst  2693.bugfix.rst  2693.feature.1.rst  2693.feature.2.rst  2693.feature.3.rst  2693.feature.4.rst  2693.feature.5.rst  2693.feature.6.rst  2693.feature.7.rst  2693.feature.8.rst  2693.feature.9.rst  2714.misc.rst  (+348 more)
ci/: check_changelog_entries.py  check_documented_exports.py  check_links.py  check_min_deps_floor.py  check_object_inventory.py  check_unlinked_types.py  lint_docs.py  min-deps-constraints.txt  run-coverage.sh  run-hypothesis.sh  sync-upstream.sh
data/: donotdelete
design/: chunk-grid.md  chunk-layout.md
docs/: Makefile  Zarr_viz.rst  about.rst  acknowledgments.rst  api.rst  conf.py  consolidated-metadata.rst  contributing.md  contributing.rst  examples.rst  getting_started.rst  index.md  index.rst  installation.rst  license.rst  migration.rst  quick-start.md  quickstart.rst  release-notes.md  release-notes.rst  release.rst  roadmap.md  roadmap.rst  spec.rst  tutorial.rst  tutorial_nb.ipynb  v3.rst  zarr-metadata-followups.md
docs/_static/: custom.css  custom.js
docs/_templates/: base.html
docs/api/: api_async.md  api_sync.md  attrs.rst  codecs.md  codecs.rst  compressors.rst  concurrency.rst  convenience.md  convenience.rst  core.rst  creation.rst  dtype.md  errors.md  filters.rst  group.md  hierarchy.rst  index.md  index.rst  metadata.md  n5.rst  registry.md  storage.md  storage.rst  sync.rst  testing.md  types.md  v3.rst  zarr.rst
docs/data/: example.sqldb
docs/design/: chunk-grid-metadata-separation.md  chunk-grid.md  sync-bypass.md
docs/developers/: contributing.rst  docs.rst  index.rst  maintaining.rst  release.rst  (+2 more)
examples/: README.md  custom_dtype.py  image_codec.py  image_codecs.py  zep8_url_demo.py
notebooks/: advanced_indexing.ipynb  benchmarks_synthetic.ipynb  blosc_microbench.ipynb  dask_2d_subset.ipynb  dask_copy.ipynb  dask_count_alleles.ipynb  dask_investigation_1.ipynb  genotype_benchmark_compressors.ipynb  object_arrays.ipynb  repr_info.ipynb  repr_tree.ipynb  sandbox.ipynb  store_benchmark.ipynb  zip_benchmark.ipynb
tests/: _shared.py  conftest.py  test_api.py  test_array.py  test_array_spec.py  test_array_v3.py  test_attributes.py  test_attrs.py  test_buffer.py  test_chunk_access.py  test_chunk_grids.py  test_chunk_layout.py  test_chunk_transform.py  test_coalesce.py  test_codec_entrypoints.py  test_codec_invariants.py  test_codec_pipeline.py  test_codec_pipeline_suite.py  test_codecs_v3.py  test_common.py  test_config.py  test_config_typed.py  test_convenience.py  test_core.py  test_creation.py  test_dim_separator.py  test_docs.py  test_dtype.py  test_dtype_registry.py  test_engine.py  test_errors.py  test_examples.py  test_fastpath_equivalence.py  test_filters.py  test_fused_pipeline.py  test_future_metadata.py  test_global_concurrency.py  test_group.py  test_group_v3.py  test_gzip.py  (+36 more)
zarr/: __init__.py  array.py  attrs.py  blosc.c  blosc.pyx  chunk.c  chunk.pxd  chunk.pyx  codecs.py  compat.py  compression.py  compressors.py  constants.py  context.py  convenience.py  core.py  create.py  creation.py  cupy.py  defaults.py  errors.py  ext.pxd  ext.pyx  filters.py  frame.py  hierarchy.py  indexing.py  mappings.py  meta.py  meta_v1.py  n5.py  new_indexing.py  storage.py  store.py  sync.py  types.py  util.py  version.py  zom.py  zoms.py
zarr_old/: PythonHelper.h  constants.py  definitions.pxd  ext.c  ext.pyx  util.py  version.py
zarrs-bindings/: Cargo.toml  pyproject.toml
zarrs-bindings/src/: chunk.rs  lib.rs  node.rs  store.rs
(+12610 files in other folders)
