[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/bench",
  "/docs",
]

[project]
name = "zarr"
description = "An implementation of chunked, compressed, N-dimensional arrays for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Alistair Miles", email = "alimanfoo@googlemail.com" },
]
maintainers = [
    { name = "Davis Bennett", email = "davis.v.bennett@gmail.com" },
    { name = "jakirkham" },
    { name = "Josh Moore", email = "josh@openmicroscopy.org" },
    { name = "Joe Hamman", email = "joe@earthmover.io" },
    { name = "Juan Nunez-Iglesias", email = "juan.nunez-iglesias@monash.edu" },
    { name = "Martin Durant", email = "mdurant@anaconda.com" },
    { name = "Norman Rzepka" },
    { name = "Ryan Abernathey" },
    { name = "David Stansby" },
    { name = "Tom Augspurger", email = "tom.w.augspurger@gmail.com" },
    { name = "Deepak Cherian" }
]
requires-python = ">=3.11"
# If you add a new dependency here, please also add it to .pre-commit-config.yml
dependencies = [
    'packaging>=22.0',
    'numpy>=1.26',
    'numcodecs[crc32c]>=0.14',
    'typing_extensions>=4.9',
    'donfig>=0.8',
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["Python", "compressed", "ndimensional-arrays", "zarr"]

[project.optional-dependencies]
# User extras
remote = [
    "fsspec>=2023.10.0",
    "obstore>=0.5.1",
]
gpu = [
    "cupy-cuda12x",
]
# Development extras
test = [
    "coverage>=7.10",
    # Pin possibly due to https://github.com/pytest-dev/pytest-cov/issues/693
    "pytest<8.4",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-accept",
    "rich",
    "mypy",
    "hypothesis",
    "pytest-xdist",
    "packaging",
    "tomlkit",
    "uv"
]
remote_tests = [
    'zarr[remote]',
    "botocore",
    "s3fs>=2023.10.0",
    "moto[s3,server]",
    "requests",
]
optional = ["rich", "universal-pathlib"]
docs = [
    # Doc building
    'sphinx==8.1.3',
    'sphinx-autobuild>=2021.3.14',
    'sphinx-autoapi==3.4.0',
    'sphinx_design',
    'sphinx-issues',
    'sphinx-copybutton',
    'sphinx-reredirects',
    'pydata-sphinx-theme',
    'numpydoc',
    # Changelog generation
    'towncrier',
    # Optional dependencies to run examples
    'numcodecs[msgpack]',
    'rich',
    's3fs>=2023.10.0',
    'astroid<4',
    'pytest'
]


[project.urls]
"Bug Tracker" = "https://github.com/zarr-developers/zarr-python/issues"
Changelog = "https://zarr.readthedocs.io/en/stable/release-notes.html"
Discussions = "https://github.com/zarr-developers/zarr-python/discussions"
Documentation = "https://zarr.readthedocs.io/"
Homepage = "https://github.com/zarr-developers/zarr-python"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
]

[tool.coverage.run]
omit = [
    "bench/compress_normal.py",
    "src/zarr/testing/conftest.py",  # only for downstream projects
]

[tool.hatch]
version.source = "vcs"

[tool.hatch.build]
hooks.vcs.version-file = "src/zarr/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "numpy~={matrix:numpy}",
]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]
numpy = ["1.26", "2.2"]
deps = ["minimal", "optional"]

[tool.hatch.envs.test.overrides]
matrix.deps.dependencies = [
  {value = "zarr[remote, remote_tests, test, optional]", if = ["optional"]}
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run-coverage-html = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report html --cov=src"
run = "run-coverage --no-cov"
run-pytest = "run"
run-verbose = "run-coverage --verbose"
run-mypy = "mypy src"
run-hypothesis = "run-coverage -nauto --run-slow-hypothesis tests/test_properties.py tests/test_store/test_stateful*"
list-env = "pip list"

[tool.hatch.envs.doctest]
features = ["test", "optional", "remote", "remote_tests"]
description = "Test environment for doctests"

[tool.hatch.envs.doctest.scripts]
run = "rm -r data/; pytest docs/user-guide --doctest-glob='*.rst'"
fix = "rm -r data/; pytest docs/user-guide --doctest-glob='*.rst' --accept"
list-env = "pip list"

[tool.hatch.envs.gputest]
dependencies = [
    "numpy~={matrix:numpy}",
    "universal_pathlib",
]
features = ["test", "gpu"]

[[tool.hatch.envs.gputest.matrix]]
python = ["3.11", "3.12", "3.13"]
numpy = ["1.26", "2.2"]
version = ["minimal"]

[tool.hatch.envs.gputest.scripts]
run-coverage = "pytest -m gpu --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run = "run-coverage --no-cov"
run-verbose = "run-coverage --verbose"
run-mypy = "mypy src"
run-hypothesis = "run-coverage --hypothesis-profile ci --run-slow-hypothesis tests/test_properties.py tests/test_store/test_stateful*"
list-env = "pip list"

[tool.hatch.envs.docs]
features = ['docs']

[tool.hatch.envs.docs.scripts]
build = "cd docs && make html"
serve = "sphinx-autobuild docs docs/_build --host 0.0.0.0"

[tool.hatch.envs.upstream]
python = "3.13"
dependencies = [
    'packaging @ git+https://github.com/pypa/packaging',
    'numpy',  # from scientific-python-nightly-wheels
    'numcodecs @ git+https://github.com/zarr-developers/numcodecs',
    's3fs @ git+https://github.com/fsspec/s3fs',
    'universal_pathlib @ git+https://github.com/fsspec/universal_pathlib',
    'typing_extensions @ git+https://github.com/python/typing_extensions',
    'donfig @ git+https://github.com/pytroll/donfig',
    'obstore @ git+https://github.com/developmentseed/obstore@main#subdirectory=obstore',
    # test deps
    'zarr[test]',
]

[tool.hatch.envs.upstream.env-vars]
PIP_INDEX_URL = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple/"
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"
PIP_PRE = "1"

[tool.hatch.envs.upstream.scripts]
run = "pytest --verbose"
run-mypy = "mypy src"
run-hypothesis = "pytest --hypothesis-profile ci tests/test_properties.py tests/test_store/test_stateful*"
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run-coverage-gpu = "pip install cupy-cuda12x && pytest -m gpu --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run-coverage-html = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report html --cov=src"
list-env = "pip list"

[tool.hatch.envs.min_deps]
description = """Test environment for minimum supported dependencies

See Spec 0000 for details and drop schedule: https://scientific-python.org/specs/spec-0000/
"""
python = "3.11"
dependencies = [
    'zarr[remote]',
    'packaging==22.*',
    'numpy==1.26.*',
    'numcodecs==0.14.*',  # 0.14 needed for zarr3 codecs
    'fsspec==2023.10.0',
    's3fs==2023.10.0',
    'universal_pathlib==0.0.22',
    'typing_extensions==4.9.*',
    'donfig==0.8.*',
    'obstore==0.5.*',
    # test deps
    'zarr[test]',
    'zarr[remote_tests]',
]

[tool.hatch.envs.min_deps.scripts]
run = "pytest --verbose"
run-hypothesis = "pytest --hypothesis-profile ci tests/test_properties.py tests/test_store/test_stateful*"
list-env = "pip list"
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run-coverage-gpu = "pip install cupy-cuda12x && pytest -m gpu --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
run-coverage-html = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report html --cov=src"

[tool.ruff]
line-length = 100
force-exclude = true
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "docs",
    "tests/test_regression/scripts/", # these are scripts that use a different version of python
    "src/zarr/v2/",
    "tests/v2/",
]

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "PERF", # Perflint
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "TC",  # flake8-type-checking
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "ANN401",
    "PT011",  # TODO: apply this rule
    "RET505",
    "RET506",
    "RUF005",
    "SIM108",
    "TRY003",
    "UP038",  # https://github.com/astral-sh/ruff/issues/7871
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "TC006",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "RUF029", "SIM117", "SIM300"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
namespace_packages = false

strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = [
    "tests.package_with_entrypoint.*",
    "zarr.testing.stateful",
    "tests.test_codecs.test_transpose",
    "tests.test_config",
    "tests.test_store.test_zip",
    "tests.test_store.test_local",
    "tests.test_store.test_fsspec",
    "tests.test_store.test_memory",
    "tests.test_codecs.test_codecs",
]
strict = false

# TODO: Move the next modules up to the strict = false section
# and fix the errors
[[tool.mypy.overrides]]
module = [
    "tests.test_metadata.*",
    "tests.test_store.test_core",
    "tests.test_store.test_logging",
    "tests.test_store.test_object",
    "tests.test_store.test_stateful",
    "tests.test_store.test_wrapper",
    "tests.test_group",
    "tests.test_indexing",
    "tests.test_properties",
    "tests.test_sync",
    "tests.test_regression.scripts.*"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests", "docs/user-guide"]
log_cli_level = "INFO"
xfail_strict = true
asyncio_mode = "auto"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--durations=10", "-ra", "--strict-config", "--strict-markers",
]
filterwarnings = [
    "error",
    # TODO: explicitly filter or catch the warnings below where we expect them to be emitted in the tests
    "ignore:Consolidated metadata is currently not part in the Zarr format 3 specification.*:UserWarning",
    "ignore:Creating a zarr.buffer.gpu.Buffer with an array that does not support the __cuda_array_interface__.*:UserWarning",
    "ignore:Automatic shard shape inference is experimental and may change without notice.*:UserWarning",
    "ignore:The codec .* is currently not part in the Zarr format 3 specification.*:UserWarning",
    "ignore:The dtype .* is currently not part in the Zarr format 3 specification.*:UserWarning",
    "ignore:Use zarr.create_array instead.:DeprecationWarning",
    "ignore:Duplicate name.*:UserWarning",
    "ignore:The `compressor` argument is deprecated. Use `compressors` instead.:UserWarning",
    "ignore:Numcodecs codecs are not in the Zarr version 3 specification and may not be supported by other zarr implementations.:UserWarning",
    "ignore:Unclosed client session <aiohttp.client.ClientSession.*:ResourceWarning"
]
markers = [
    "gpu: mark a test as requiring CuPy and GPU",
    "slow_hypothesis: slow hypothesis tests",
]

[tool.repo-review]
ignore = [
	"PC111",  # fix Python code in documentation - enable later
	"PC180",  # for JavaScript - not interested
]

[tool.numpydoc_validation]
# See https://numpydoc.readthedocs.io/en/latest/validation.html#built-in-validation-checks for list of checks
checks = [
    "GL06",
    "GL07",
    # Currently broken; see https://github.com/numpy/numpydoc/issues/573
    # "GL09",
    "GL10",
    "SS04",
    "PR02",
    "PR03",
    "PR05",
    "PR06",
]

[tool.towncrier]
directory = 'changes'
filename = "docs/release-notes.rst"
underlines = ["-", "~", "^"]
issue_format = ":issue:`{issue}`"

[tool.codespell]
ignore-words-list = "astroid"

[project.entry-points.pytest11]
zarr = "zarr.testing"
