[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/bench",
  "/docs",
]

[project]
name = "zarr"
description = "An implementation of chunked, compressed, N-dimensional arrays for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Alistair Miles", email = "alimanfoo@googlemail.com" },
]
maintainers = [
    { name = "Davis Bennett", email = "davis.v.bennett@gmail.com" },
    { name = "jakirkham" },
    { name = "Josh Moore", email = "josh@openmicroscopy.org" },
    { name = "Joe Hamman", email = "joe@earthmover.io" },
    { name = "Juan Nunez-Iglesias", email = "juan.nunez-iglesias@monash.edu" },
    { name = "Martin Durant", email = "mdurant@anaconda.com" },
    { name = "Norman Rzepka" },
    { name = "Ryan Abernathey" },
    { name = "David Stansby" },
    { name = "Tom Augspurger", email = "tom.w.augspurger@gmail.com" },
    { name = "Deepak Cherian" }
]
requires-python = ">=3.12"
dependencies = [
    'packaging>=22.0',
    'numpy>=2',
    'numcodecs>=0.14',
    'google-crc32c>=1.5',
    'typing_extensions>=4.14',
    'donfig>=0.8',
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["Python", "compressed", "ndimensional-arrays", "zarr"]

[project.optional-dependencies]
# User-facing extras (shipped in package metadata)
remote = [
    "fsspec>=2023.10.0",
    "obstore>=0.5.1",
]
gpu = [
    "cupy-cuda12x; sys_platform != 'darwin'",
]
cast-value-rs = ["cast-value-rs"]
cli = ["typer"]
# Floor is the minimum we support and test (exercised by the `min_deps` CI job
# via `uv --resolution lowest-direct`); was the old `min_deps` hatch pin.
optional = ["universal-pathlib>=0.2.0"]

[project.scripts]
zarr = "zarr._cli.cli:app"


[project.urls]
issues = "https://github.com/zarr-developers/zarr-python/issues"
changelog = "https://zarr.readthedocs.io/en/stable/release-notes.html"
Discussions = "https://github.com/zarr-developers/zarr-python/discussions"
documentation = "https://zarr.readthedocs.io/"
homepage = "https://github.com/zarr-developers/zarr-python"

# Dev *tooling* is pinned to exact versions for reproducible CI, and the full
# transitive closure is locked in `uv.lock` (CI installs with `uv sync --locked`).
# Runtime/integration deps (fsspec, obstore, s3fs, botocore, numcodecs,
# universal-pathlib) instead carry floor (`>=`) constraints, so the `optional`
# test matrix keeps exercising their latest releases; their floor is covered by
# the `min_deps` CI job (`uv sync --resolution lowest-direct`, which derives the
# floors from these `>=` constraints) and their bleeding edge by the `upstream`
# job (`scripts/sync-upstream.sh`). Bump the pins deliberately, e.g. via
# dependabot or `uv lock --upgrade`.
[dependency-groups]
test = [
    "coverage==7.14.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-accept==0.2.3",
    "numpydoc==1.10.0",
    "hypothesis==6.155.2",
    "pytest-xdist==3.8.0",
    "pytest-benchmark==5.2.3",
    "pytest-codspeed==5.0.3",
    "tomlkit==0.15.0",
    "uv==0.11.20",
]
remote-tests = [
    {include-group = "test"},
    "fsspec>=2023.10.0",
    "obstore>=0.5.1",
    "botocore",
    "s3fs>=2023.10.0",
    "moto[s3,server]==5.2.2",
    "requests==2.34.2",
]
release = [
    "towncrier==25.8.0",
]
docs = [
    # Doc building
    "mkdocs-material[imaging]==9.7.6",
    "mkdocs==1.6.1",
    "mkdocstrings==1.0.4",
    "mkdocstrings-python==2.0.4",
    "mike==2.2.0",
    "mkdocs-jupyter==0.26.3",
    "mkdocs-redirects==1.2.3",
    "markdown-exec[ansi]==1.12.1",
    "griffe-inherited-docstrings==1.1.3",
    "ruff==0.15.16",
    # Changelog generation
    {include-group = "release"},
    # Optional dependencies to run examples
    "numcodecs[msgpack]",
    "s3fs>=2023.10.0",
    "astroid==4.1.2",
    "pytest==9.0.3",
]
dev = [
    {include-group = "test"},
    {include-group = "remote-tests"},
    {include-group = "docs"},
    "universal-pathlib",
    "mypy==2.1.0",
]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
]

[tool.coverage.run]
omit = [
    "bench/compress_normal.py",
    "src/zarr/testing/conftest.py",  # only for downstream projects
]

[tool.hatch]
version.source = "vcs"
# Only consider zarr-python's own `v*` tags when deriving the version. Without
# this filter `git describe` matches the most recent tag of any shape,
# including the `zarr_metadata-v*` tags used to release the zarr-metadata
# subpackage — which would make a from-source build report a `0.2.x` version
# instead of `3.x`.
version.raw-options = { git_describe_command = "git describe --dirty --tags --long --match v*" }

[tool.hatch.build]
hooks.vcs.version-file = "src/zarr/_version.py"

# NOTE: `tool.hatch.envs.*` used to define the test/docs/min_deps/upstream
# environments and their run scripts. Those are gone: CI now drives `uv` directly
# (`uv sync --locked ...`) with the shared runners in `scripts/`, and the dep sets
# (extras/groups) live in `.github/workflows/`. See docs/contributing.md.

[tool.ruff]
line-length = 100
force-exclude = true
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "docs",
    "tests/test_regression/scripts/", # these are scripts that use a different version of python
    "src/zarr/v2/",
    "tests/v2/",
]

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "PERF", # Perflint
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "TC",  # flake8-type-checking
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "ANN401",
    "PT011",  # TODO: apply this rule
    "RET505",
    "RET506",
    "RUF005",
    "RUF043",
    "SIM108",
    "TRY003",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "TC006",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "RUF029", "SIM117", "SIM300"]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = false
pretty = true
show_error_code_links = true
show_error_context = true
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool", "truthy-iterable"]

[[tool.mypy.overrides]]
module = [
    "tests.package_with_entrypoint.*",
    "zarr.testing.stateful",
    "tests.test_codecs.test_transpose",
    "tests.test_config",
    "tests.test_store.test_zip",
    "tests.test_store.test_local",
    "tests.test_store.test_memory",
    "tests.test_codecs.test_codecs",
    "tests.test_metadata.*",
    "tests.test_store.test_core",
    "tests.test_store.test_logging",
    "tests.test_store.test_object",
    "tests.test_store.test_stateful",
    "tests.test_store.test_wrapper",
]
strict = false

# TODO: Move the next modules up to the strict = false section
# and fix the errors
[[tool.mypy.overrides]]
module = [
    "tests.test_store.test_fsspec",
    "tests.test_group",
    "tests.test_indexing",
    "tests.test_properties",
    "tests.test_sync",
    "tests.test_regression.scripts.*"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7"
testpaths = ["src", "tests", "docs/user-guide"]
log_cli_level = "INFO"
log_level = "INFO"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--benchmark-columns", "min,mean,stddev,outliers,rounds,iterations",
    "--benchmark-disable", # benchmark routines run as tests without benchmarking instrumentation
    "--durations", "10",
    "-ra", "--strict-config", "--strict-markers",
    "--doctest-modules",
    "--ignore=tests/test_regression/scripts",
    "--ignore=src/zarr/_cli",
]
filterwarnings = [
    "error",
    "ignore:Unclosed client session <aiohttp.client.ClientSession.*:ResourceWarning",
    "ignore:Numcodecs codecs are not in the Zarr version 3 specification.*:UserWarning",
    # s3fs finalizers can fail during session cleanup when aiobotocore sessions are garbage
    # collected without being entered. This is a known issue in s3fs/aiobotocore, and pytest
    # per-test filterwarnings markers can't catch it (https://github.com/pytest-dev/pytest/issues/14096).
    "ignore:Exception ignored ((on calling weakref callback)|(in[\\s\\S]*Session was never entered)):pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "gpu: mark a test as requiring CuPy and GPU",
    "s3: mark a test as requiring a (mock) S3 backend via moto",
    "slow_hypothesis: slow hypothesis tests",
]

[tool.repo-review]
ignore = [
	"PC111",  # fix Python code in documentation - enable later
    "PC140",  # we run mypy via `uv run mypy`, not via mirrors-mypy
    "PC170",  # use PyGrep hooks - no *.rst files to check
	"PC180",  # for JavaScript - not interested
	"PC902",  # pre-commit.ci custom autofix message - not using autofix
	"PY007",  # task running is uv + ci/*.sh shell scripts, not nox/tox/hatch envs
]

[tool.numpydoc_validation]
# See https://numpydoc.readthedocs.io/en/latest/validation.html#built-in-validation-checks for list of checks
checks = [
    # Requires third-party support; see https://github.com/numpy/numpydoc/issues/463
    # "GL06",
    # "GL07",
    # Currently broken; see https://github.com/numpy/numpydoc/issues/573
    # "GL09",
    "GL10",
    "SS04",
    "PR02",
    "PR03",
    "PR05",
    "PR06",
]

[tool.towncrier]
directory = 'changes'
filename = "docs/release-notes.md"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/zarr-developers/zarr-python/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"

[tool.codespell]
ignore-words-list = "astroid"

[project.entry-points.pytest11]
zarr = "zarr.testing"
